manifests/dvwa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvwa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dvwa
  template:
    metadata:
      labels:
        app: dvwa
    spec:
      containers:
        - name: web-dvwa
          image: vulnerables/web-dvwa
          ports:
            - containerPort: 80
