manifests/dvwa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dvwa
spec:
  selector:
    app: dvwa
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
