manifests/dvwa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dvwa-ingress
spec:
  rules:
    - host: dvwa.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dvwa
                port:
                  number: 80
